+fixes, gap analyse, showing courses

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,6 +21,7 @@
 }
 
 .flash {
+  text-align: center;
   padding: 10px;
 }
 
